added Job Result Page

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@editorjs/list": "^2.0.4",
         "@editorjs/paragraph": "^2.11.7",
         "@heroicons/react": "^2.2.0",
+        "@radix-ui/react-slider": "^1.2.2",
         "react-hot-toast": "^2.5.1",
         "react-quill": "^2.0.0"
     }
